added basic styling

--- a/source/frontend/css/main.less
+++ b/source/frontend/css/main.less
@@ -1,7 +1,14 @@
-@import "fluidable";
+@import "colors";
 @import "css_reset";
+@import "components/navigation";
+@import "components/chat_window";
+@import "components/room_list";
 
 body {
-  flex: auto;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 400;
 }
 
+.col-group {
+  display: flex;
+}
