added input styles

--- a/source/frontend/css/components/chat_window.less
+++ b/source/frontend/css/components/chat_window.less
@@ -1,14 +1,14 @@
 .chat-window--wrp {
   height:  calc(~"100vh -" @headerHeight);
-  background: #dcdcdc;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   width: 75%;
+  overflow: hidden;
 }
 
 .chat-window--messages {
-  height: calc(~"100vh - 90px");
+  height: calc(~"100vh - 150px");
   overflow-y: scroll;
 }
 
