--- a/source/frontend/css/main.less
+++ b/source/frontend/css/main.less
@@ -3,6 +3,7 @@
 @import "components/navigation";
 @import "components/chat_window";
 @import "components/room_list";
+@import "components/chat_input";
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
