added username to chat message

--- a/source/frontend/css/main.less
+++ b/source/frontend/css/main.less
@@ -4,6 +4,7 @@
 @import "components/chat_window";
 @import "components/room_list";
 @import "components/chat_input";
+@import "components/messages";
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
