added styles for messages

--- a/source/frontend/css/components/messages.less
+++ b/source/frontend/css/components/messages.less
@@ -1,3 +1,18 @@
 .messages--message {
-  padding: 10px;
+
+}
+
+.message--wrp {
+  padding: 20px;
+  border-bottom: 1px solid @lightGray;
+  position: relative;
+}
+
+.messages--meta {
+  text-align: right;
+  color: #777777;
+  font-size: 80%;
+  position: absolute;
+  right: 20px;
+  bottom: 10px;
 }
